--- a/docs/write_up/JDM_mixed_fishery_letter.tex
+++ b/docs/write_up/JDM_mixed_fishery_letter.tex
@@ -89,31 +89,31 @@ have begun the process of rebuilding depleted fish populations\cite{Worm2009}.
 Improved fisheries management \deleted{has the potential to} can increase
 population sizes and allow increased sustainable catches, yet fisheries catch
 globally remains stagnant\cite{FAO2016}. With future increased demand for fish
-protein \deleted{\cite{B??n??2016}} there is an important role for well managed
-fisheries in supporting future food security \cite{Mcclanahan2015}
-\deleted[id=coilin]{and} \deleted{there} \replaced[id=coilin]{necessitating
-	}{remains a need to ensure} fisheries are managed efficiently to
-maximise productivity.
+protein\deleted{\cite{B??n??2016}} there is an important role for well managed
+fisheries in supporting future food
+security\cite{Mcclanahan2015}\deleted[id=coilin]{and}\deleted{there}
+\replaced[id=coilin]{necessitating }{remains a need to ensure}fisheries are
+managed efficiently to maximise productivity.
 
 A \deleted[id = brutus]{particular} challenge in realising increased catches
-from rebuilt populations is maximising yields from mixed fisheries
-\cite{Branch2008, Kuriyama2016, Ulrich2016}. In mixed fisheries\deleted{, the
-	predominant type of fishery worldwide, several fish species are caught
-	together in the same net or fishing operation \deleted{(known as a
-		`technical interaction')}. If} managed by individual quotas,
-\replaced[id = brutus]{if}{and} catches do not match available stock quotas,
-either a vessel must stop fishing when the first quota is reached (the `choke'
-species) or overexploitation of the weaker species occurs while fishers
-\deleted{continue to} catch more healthy species and throw back (`discard') the
-fish for which they have no quota\cite{Batsleer2015}.  There is\deleted{,
-	therefore,} a pressing need for scientific tools which simplify the
-complexities of mixed fisheries to help \replaced[id = coilin]{avoid
-	discarding}{managers and fishers maximise catches}. 
+from rebuilt populations is maximising yields from mixed
+fisheries\cite{Branch2008, Kuriyama2016, Ulrich2016}. In mixed
+fisheries\deleted{, the predominant type of fishery worldwide, several fish
+	species are caught together in the same net or fishing operation
+	\deleted{(known as a `technical inteaction')}. If} managed by
+individual quotas, \replaced[id = brutus]{if}{and} catches do not match
+available stock quotas, either a vessel must stop fishing when the first quota
+is reached (the `choke' species) or overexploitation of the weaker species
+occurs while fishers \deleted{continue to} catch more healthy species and throw
+back (`discard') the fish for which they have no quota\cite{Batsleer2015}.
+There is\deleted{, therefore,} a pressing need for scientific tools which
+simplify the complexities of mixed fisheries to help \replaced[id =
+coilin]{avoid discarding}{managers and fishers maximise catches}. 
 
 Sustainability of European fisheries has been hampered by this `mixed fishery
-problem' for decades with large-scale discarding\cite{Uhlmann2014}.  \deleted{A
+problem' for decades with large-scale discarding\cite{Uhlmann2014}.\deleted{A
 	paradigm shift is being introduced} Under the EU Common Fisheries
-Policy (CFP) reform of 2012 \deleted{through two significant management
+Policy (CFP) reform of 2012\deleted{through two significant management
 	changes.  First}, by 2019 all fish that are caught are due to be
 counted against the respective stock quota\deleted{; second, by 2020 all fish
 	stocks must be fished so as to be able to produce their Maximum
@@ -125,20 +125,20 @@ counted against the respective stock quota\deleted{; second, by 2020 all fish
 	(MSFD;\cite{EuropeanParliament2008}) and move Europe towards an
 	ecosystem based approach to fisheries management\cite{Garcia2003}}.
 \deleted{Societal objectives for fisheries to achieve MSY across ecosystem
-	components are paralleled by} \deleted{Individual fishers goals
+	components are paralleled by}\deleted{Individual fishers goals
 	%\added[id =
 %coilin]{are to} maximise utility; whether that be profit, income or the
-continuance of traditional practices.}  \deleted{Under the new policy,} Unless
+continuance of traditional practices.}\deleted{Under the new policy,}Unless
 fishers can avoid catch of unwanted species they will have to stop fishing when
 reaching their first restrictive quota \deleted{. This} introducing a
-\deleted{potential} significant cost to \deleted{fishers of} under-utilised
-quota\cite{Ulrich2016} and \deleted{provides} a strong incentive to mitigate
-such losses\cite{Condie2013}. The ability \deleted{of fishers} to align
-\deleted{their} catch with available quota depends on being able to exploit
+\deleted{potential} significant cost to\deleted{fishers of} under-utilised
+quota\cite{Ulrich2016} and\deleted{provides} strong incentive to mitigate
+such losses\cite{Condie2013}. The ability\deleted{of fishers} to align
+\deleted{their}catch with available quota depends on being able to exploit
 target species while avoiding unwanted catch,\deleted{ Methods by which fishers
 	can alter their fishing patterns include} either by switching fishing
-method \deleted{(e.g.  trawling to netting)}, changing technical gear
-characteristics \deleted{(e.g.  introducing escapement panels in nets)}, or the
+method\deleted{(e.g.  trawling to netting)}, changing technical gear
+characteristics\deleted{(e.g.  introducing escapement panels in nets)}, or the
 timing and location of fishing activity\cite{vanPutten2012a}. \deleted{For
 	example, otter trawl gears are known to have higher catch rates of
 	roundfish due to the higher headline and wider sweeps which herd
@@ -146,24 +146,25 @@ timing and location of fishing activity\cite{vanPutten2012a}. \deleted{For
 	%\replaced[id = coilin]{lift}{'dig'} benthic flatfish species from the
 	seabed\cite{Fraser2008}.}
 
-Spatiotemporal \deleted{management} measures \deleted{(such as time-limited
+Spatiotemporal\deleted{management} measures\deleted{(such as time-limited
 	fishery closures)} have been applied to reduce unwanted catch with
-varying degrees of success\cite{Needle2011, Dunn2014a}, \added{partly because}
-\deleted{However, such measures} \added{they} have \deleted{generally} been
-targeted at individual species without considering associations \deleted{and
-	interactions} among several species. Highly mixed fisheries are complex
-with spatial, technological and community interactions \deleted{combining};
-\deleted{The design of spatio-temporal management measures which aim to allow
-	exploitation of high quota stocks while protecting low quota stocks
-	requires understanding of these interactions at a scale meaningful to
-	managers and fishers.} \deleted{Here,} Our goal is to develop a
-framework for understanding these complexities. We do so by implementing a
-spatio-temporal dimension reduction method and use \deleted{the} results to
-draw inference on the fishery-community dynamics, creating a framework to
-identify trends common among species \deleted{. We use this to} and describe
-\replaced[id = coilin]{the potential for and limitations of}{where} spatial
-measures \replaced[id = coilin]{to}{can contribute to} mitigate\deleted{ing}
-unwanted catches in highly mixed fisheries.
+varying degrees of success\cite{Needle2011, Dunn2014a}, \added{partly
+	because}\deleted{However, such measures} \added{they} have
+\deleted{generally}been targeted at individual species without considering
+associations\deleted{and interactions} among several species. Highly mixed
+fisheries are complex with spatial, technological and community
+interactions\deleted{combining}; \deleted{The design of spatio-temporal
+	management measures which aim to allow exploitation of high quota
+	stocks while protecting low quota stocks requires understanding of
+	these interactions at a scale meaningful to managers and
+	fishers.}\deleted{Here,} our goal is to develop a framework for
+understanding these complexities. We do so by implementing a spatio-temporal
+dimension reduction method and use \deleted{the} results to draw inference on
+the fishery-community dynamics, creating a framework to identify trends common
+among species \deleted{. We use this to} and describe \replaced[id =
+coilin]{the potential for and limitations of}{where} spatial measures
+\replaced[id = coilin]{to}{can contribute to} mitigate\deleted{ing} unwanted
+catches in highly mixed fisheries.
 
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
@@ -174,34 +175,33 @@ unwanted catches in highly mixed fisheries.
 	fisheries.} We \deleted{use fisheries-independent survey data to}
 characterise the spatiotemporal dynamics of key components of a fish community
 by \deleted{employing a geostatistical Vector Autoregressive Spatiotemporal
-	model (VAST). We} implement\added{ing} a factor analysis decomposition
+	model (VAST). We}implement\added{ing} a factor analysis decomposition
 to describe trends in spatiotemporal dynamics of the different species as a
-function of latent variables \cite{Thorson2015} representing spatial variation
+function of latent variables\cite{Thorson2015} representing spatial variation
 (9 factors; \deleted{which we call} 'average' spatial variation) and
 spatio-temporal variation (9 factors) for encounter probability and positive
 catch rates (\deleted{which we call} 'positive density')
 separately\cite{Thorson2015a}. \added{This allows us to} \deleted{By describing
 	the species dynamics through underlying contributory spatiotemporal
 	factors we can} take account of how the factors contribute to affect
-catches of the species in mixed fisheries. \deleted{We use} Gaussian Markov
-Random Fields (GMRFs) \deleted{to} capture spatial and temporal dependence
+catches of the species in mixed fisheries.\deleted{We use} Gaussian Markov
+Random Fields (GMRFs) \deleted{to}capture spatial and temporal dependence
 within and among species groups for both encounter probability and positive
-density\cite{Thorson2013}. \deleted{VAST is set in a mixed modelling framework
-	to allow estimation of} Fixed effects \deleted{to} account for
+density\cite{Thorson2013}.\deleted{VAST is set in a mixed modelling framework
+	to allow estimation of} Fixed effects\deleted{to} account for
 systematic differences driving encounter and catches\deleted{,} such as
 differences in sampling efficiency (a.k.a.  catchability), while random effects
 capture the spatio-temporal dynamics of the fish community.
 
-\subsection{Dynamics of Celtic Sea fisheries}
-
-\deleted{We use the highly mixed demersal fisheries of the Celtic Sea as a case
-	study.} The Celtic Sea is a temperate sea where fisheries are spatially
-and temporally complex\deleted{; mixed fisheries are undertaken by several
-	nations using different gear types}\cite{Ellis2000, Gerritsen2012}.
-Close to 150 species have been identified in the commercial catches of the
-Celtic Sea, with approximately 30 species dominating the catch\cite{Mateo2016}.
-We parametrise our \deleted{spatiotemporal} model using catch data from seven
-fisheries-independent surveys undertaken \deleted{in the Celtic Sea} over the
+\subsection{Dynamics of Celtic Sea fisheries}\deleted{We use the highly mixed
+	demersal fisheries of the Celtic Sea as a case study.} The Celtic Sea
+is a temperate sea where fisheries are spatially and temporally
+complex\deleted{; mixed fisheries are undertaken by several nations using
+	different gear types}\cite{Ellis2000, Gerritsen2012}. Close to 150
+species have been identified in the commercial catches of the Celtic Sea, with
+approximately 30 species dominating the catch\cite{Mateo2016}. We parametrise
+our \deleted{spatiotemporal} model using catch data from seven
+fisheries-independent surveys undertaken\deleted{in the Celtic Sea} over the
 period 1990 - 2015 (Table S1) and include nine of the main commercial species
 (see Table S2, Figure 2) \deleted{: Atlantic cod (\textit{Gadus morhua}),
 	Atlantic haddock (\textit{Melanogrammus aeglefinus}), Atlantic whiting
@@ -225,7 +225,7 @@ classes based on their legal minimum conservation reference size (Table S2).
 \subsection{Common average spatial patterns driving species associations} A
 spatial dynamic factor analysis decomposes the dominant spatial patterns
 driving differences in encounter probability and positive density. The first
-three factors \deleted{(after PCA rotation)} account for 83.7\% of the between
+three factors\deleted{(after PCA rotation)} account for 83.7\% of the between
 species variance in average encounter probability and 69\% of the between
 species variance in average positive density. A clear spatial pattern can been
 seen both for encounter probability and positive density, with a positive value
@@ -250,7 +250,7 @@ in the inshore areas (Figure 1).
 On the third factor, there is a positive association with the easterly waters
 for encounter probability and negative with the westerly waters. This
 \deleted{manifests in the species associations as} splits\deleted{ting} the
-roundfish species cod, haddock and whiting which \deleted{all} have a positive
+roundfish species cod, haddock and whiting which\deleted{all} have a positive
 association with the third factor for average encounter probability from the
 rest of the species \deleted{which have a negative association}.  Positive
 density is driven by a north / south split (Figure 1), with positive values in
@@ -293,18 +293,18 @@ brutus]{, as identified in other marine species distribution
 
 \subsection{\replaced[id = Paul]{Time varying species distributions, but
 		stability within species groups}{Changes in spatial patterns
-		over time, but stability in species dynamics}} \deleted{While
+		over time, but stability in species dynamics}}\deleted{While
 	there are clear spatial patterns in the factor coefficients describing
 	differences in average (over time) encounter probability and positive
-	density (Figure 1),} \deleted{The} Inter-annual differences in factor
+	density (Figure 1),}\deleted{The} Inter-annual differences in factor
 coefficients show less structure (Figures S5, S6). These inter-annual
 differences are important as they reflect the ability of fishers to predict
 where they can target species from one year to the next.\deleted{, without
-	which it may be difficult to avoid unwanted catch} \deleted{There were,
+	which it may be difficult to avoid unwanted catch}\deleted{There were,
 	however, While spatio-temporal factor coefficients did not show
 	consistent trends from year to year across all species,} Common
-patterns in spatiotemporal factor coefficients among species \deleted{there
-	were clear relationships (Figure 2)} \deleted{.  The same factors
+patterns in spatiotemporal factor coefficients among species\deleted{there
+	were clear relationships (Figure 2)}\deleted{.  The same factors
 	appear to} drive spatiotemporal distributions of megrim, anglerfish
 species and hake (the deeper water species, species-group negatively associated
 with the second axes of Figure 2a) and the roundfish and flatfish
@@ -330,27 +330,28 @@ dynamics we considered how species covary in space and time through among
 species correlations. Pearson correlation coefficients for the modelled average
 spatial encounter probability (Figure 3a) show clear strong associations
 between adult and juvenile size classes for all species (\textgreater 0.75 for
-all species except hake, 0.56).  \deleted{Among species-groups,} Hierarchical
-clustering identified the same three common groups \deleted[id = brutus]{as our
+all species except hake, 0.56).\deleted{Among species-groups,} Hierarchical
+clustering identified the same three common groups\deleted[id = brutus]{as our
 	visual inspection of factor loadings above,} with roundfish (cod,
-haddock, whiting) \deleted{closely grouped in their association, with
+haddock, whiting)\deleted{closely grouped in their association, with
 	correlations for adult cod with adult haddock and adult whiting of 0.73
 	and 0.5 respectively, while adult haddock with adult whiting was 0.63
-	(Figure 3a).}, flatfish (plaice and sole) \deleted{are also strongly
+	(Figure 3a).}, flatfish (plaice and sole)\deleted{are also strongly
 	correlated with adult plaice and sole having a coefficient of 0.75.
 	The final group are principally the} and species found in the deeper
-waters (hake, megrim and both anglerfish species) \deleted{with the megrim
+waters (hake, megrim and both anglerfish species)\deleted{with the megrim
 	strongly associated with the budegassa anglerfish species (0.88).
 	Negative relationships were found between plaice, sole and the monkfish
 	species (-0.27, -0.26 for the adult size class with budegassa adults
 	respectively) and hake (-0.33, -0.37) (Figure 3a)} showing strong
-intra-group correlations indicating similar spatial distributions.
-\deleted{This confirms the associations among species seen in the factor
-	loadings, with three distinct species-group assemblages being present.}
-\deleted{This is also evident in} Correlation coefficients for the average
-positive density also have strong associations among \deleted{the} roundfish
-(Figure 3b) \deleted{show fewer significant positive or negative relationships
-	among species than for encounter probability, but still evident are the
+intra-group correlations indicating similar spatial distributions.\deleted{This
+	confirms the associations among species seen in the factor loadings,
+	with three distinct species-group assemblages being
+	present.}\deleted{This is also evident in} Correlation coefficients for
+the average positive density also have strong associations among\deleted{the}
+roundfish (Figure 3b). \deleted{show fewer significant positive or negative
+	relationships among species than for encounter probability, but still
+	evident are the
 	strong association among the roundfish with higher catches of cod are
 	associated with higher catches of haddock (0.58) and whiting (0.47), as
 	well as the two anglerfish species (0.71 for piscatorius and 0.44 for
@@ -390,7 +391,7 @@ positive density also have strong associations among \deleted{the} roundfish
 
 \subsection{Subtle differences in distributions may be important to separate
 	catches within groups \deleted[id = coilin]{under the landing
-		obligation}}: \deleted[id = coilin]{The analysis shows the
+		obligation}} \deleted[id = coilin]{The analysis shows the
 	interdependence within the species-groups of roundfish, flatfish and
 	deeper water species, where catching one species within the group
 	indicates a high probability of catching the other species, which has
@@ -398,10 +399,10 @@ positive density also have strong associations among \deleted{the} roundfish
 	implementation of the EU's landings obligation. }If production from
 mixed fisheries is to be maximised, decoupling catches of species between and
 within the groups will be key. For example, asking where the maximal separation
-in the densities of two coupled species is likely to occur? \deleted{To address
+in the densities of two coupled species is likely to occur?\deleted{To address
 	this requirement,} We map the difference in spatial distribution
-\deleted{within a group} for each pair of species within a species-group for a
-single year (2015; Figure 4) \deleted{. This would} \added{to} facilitate
+\deleted{within a group}for each pair of species within a species-group for a
+single year (2015; Figure 4) \deleted{. This would}\added{to} facilitate
 discussion on maximal separation, for example, between difficult to separate
 species such as haddock and whiting (Figure 4c). \deleted{Cod had a more
 	north-westerly distribution than haddock, while cod was more westerly
@@ -424,10 +425,10 @@ Predicted catch distribution from a ``typical'' otter trawl gear and beam trawl
 fishing at three different locations highlights the differences fishing gear
 and location makes on catches (Figure 4h). \deleted{As can be seen, both the
 	gear selectivity and area fished play important contributions to the
-	catch compositions;}. In the inshore area (location `A') plaice and
-sole are the two main species \deleted{in} caught reflecting their distribution
+	catch compositions;}In the inshore area (location `A') plaice and
+sole are the two main species\deleted{in} caught reflecting their distribution
 and abundance, though the otter trawl gear catches a greater proportion of
-plaice to sole than the beam trawl.  The area between Britain and Ireland
+plaice to sole than the beam trawl. The area between Britain and Ireland
 (location `B') has a greater contribution of whiting, haddock, cod, hake and
 anglerfishes in the catch with the otter trawl catching a greater proportion of
 the roundfish, haddock, whiting and cod while the beam trawl catches more
@@ -448,41 +449,42 @@ catches between locations are likely to be more important. \deleted[id =
 brutus]{For example, beam trawls fishing at the inshore locations (e.g.
 	location `A' in Figure 4) are likely to predominately catch plaice and
 	sole, yet switching to the offshore locations (e.g. location `C') would
-	likely yield greater catches of megrim and anglerfishes.  Such}
-\added{This highlights that} changes in spatial fishing patterns are likely to
-play an important role in supporting implementation of the landings obligation.
+	likely yield greater catches of megrim and anglerfishes.
+	Such}\added{This highlights that} changes in spatial fishing patterns
+are likely to play an important role in supporting implementation of the
+landings obligation.
 
 More challenging is within-group spatial separation due to
-\deleted{significant} overlaps in spatial distributions for the species, driven
-by common environmental factors. Subtle changes may yield some benefit in
-changing catch composition, yet the outcome is likely to be much more difficult
-to predict. \deleted{For example,} Subtle differences in the distribution of
-cod, haddock and whiting can be seen in Figures 4a-c, showing spatial
-separation of catches is \deleted[id = brutus]{much more challenging and}
-likely to need to be supported by other measures such as changes to the
-selectivity characteristics of gear\cite{Santos2016}. 
+\deleted{significant}overlaps in spatial distributions for the species, driven
+by common environmental factors. Subtle changes in location fished may yield
+some benefit in changing catch composition, yet the outcome is likely to be
+much more difficult to predict.\deleted{For example,} Subtle differences in
+the distribution of cod, haddock and whiting can be seen in Figures 4a-c,
+showing spatial separation of catches is \deleted[id = brutus]{much more
+	challenging and}likely to need to be supported by other measures such
+as changes to the selectivity characteristics of gear\cite{Santos2016}. 
 
 A role that science can play in supporting effectiveness of spatiotemporal
 avoidance could be in providing probabilistic advice on \deleted{likely}
-hotspots for species \deleted{occurrence and high species density} which can
-inform fishing decisions.  Previous modelling studies have shown how
+hotspots for species\deleted{occurrence and high species density} which can
+inform fishing decisions. Previous modelling studies have shown how
 spatiotemporal models could improve predictions of high ratios of bycatch
 species to target species\cite{Ward2015, Cosandey-Godin2015, Breivik2016}, and
-geostatistical models are well suited \deleted{to this} as they incorporate
+geostatistical models are well suited\deleted{to this} as they incorporate
 spatial dependency while providing for probabilities to be drawn from posterior
-distributions of the parameter estimates.  We posit \deleted{that} such advice
+distributions of the parameter estimates. We posit\deleted{that} such advice
 could be enhanced by integrating data obtained directly from commercial fishing
 vessels at a higher temporal resolution, providing real-time forecasts to
 inform fishing choices that also captures seasonal differences in
-distributions\deleted{, akin to weather forecasting}.  \added{Such} advice
-\deleted{informed by a model including a seasonal or real-time component} could
-inform optimal policies for time-area closures, move-on rules or even as
-informal information \deleted{to be} utilised by fishers directly without being
+distributions\deleted{, akin to weather forecasting}. \added{Such}
+advice\deleted{informed by a model including a seasonal or real-time component}
+could inform optimal policies for time-area closures, move-on rules or even as
+informal information\deleted{to be} utilised by fishers directly without being
 reliant on costly continuous data collection on environmental
 parameters\deleted{, but by using the vessels-as-laboratories approach}.
 
 An important question for the implementation of the EU's landing obligation is
-how far spatial avoidance can go to achieve catch balancing in fisheries.  Our
+how far spatial avoidance can go to achieve catch balancing in fisheries. Our
 model captures differences between location fished for two gear types and
 \deleted{their} broad scale effect on catch composition\deleted{, information
 	crucial for managers in implementing the landing
@@ -492,7 +494,7 @@ effectiveness of spatial avoidance. Differences in ability to change catch
 composition have also been observed for different fleets\deleted{; in the North
 	Sea targeting ability was found to differ between otter and beam
 	trawlers as well as between vessels of different
-	sizes}\cite{Pascoe2007}. \deleted{It is likely}\deleted{, however,
+	sizes}\cite{Pascoe2007}.\deleted{It is likely}\deleted{, however,
 	that} \added{This} analysis \added{likely} reflects a lower bound on
 \deleted[id = coilin]{the utility of spatial} avoidance as fine-scale
 behavioural decisions such as time-of-day, gear configuration and location
@@ -517,8 +519,8 @@ choices can also be used to affect catch\cite{Abbott2015, Thorson2016}.
 
 
 Complex environmental, fishery and community drivers of distribution for
-\deleted[id = brutus]{groups of} species highlights the scale of the challenge
-in separating catches \deleted[id = brutus]{within the species-groups} using
+\deleted[id = brutus]{groups of}species highlights the scale of the challenge
+in separating catches\deleted[id = brutus]{within the species-groups} using
 spatial management measures. This has important implications for management of
 the mixed fisheries under the EU landings obligation. Our analysis identifies
 where it may be easier to separate catches of species (among groups) and where
@@ -533,18 +535,18 @@ time.
 
 \subsection{Model structure:} 
 \added{We use a geostatistical Vector Autoregressive Spatiotemporal model
-	(VAST)} \footnote{Software in the R statistical programming language can be found
-	here: \url{www.github.com/james-thorson/VAST}} to implement a
-delta-generalised linear mixed modelling (GLMM) framework that takes account of
-spatio-temporal correlations among species through implementation of a
-spatial dynamic factor analysis (SDFA). Spatial variation is captured through a
-Gaussian Markov Random Field, while we model random variation among
-species and years. Covariates affecting catchability (to account for
-differences between fishing surveys) and density (to account for environmental
-preferences) can be incorporated for predictions of presence and positive
-density. The following briefly summarises the key methods implemented in the
-VAST framework. For full details of the model the reader is invited directed to
-Thorson \textit{et al} 2017\cite{Thorson2017}.
+	(VAST)}\footnote{Software in the R statistical programming language
+	can be found here: \url{www.github.com/james-thorson/VAST}} to
+implement a delta-generalised linear mixed modelling (GLMM) framework that
+takes account of spatio-temporal correlations among species through
+implementation of a spatial dynamic factor analysis (SDFA). Spatial variation
+is captured through a Gaussian Markov Random Field, while we model random
+variation among species and years. Covariates affecting catchability (to
+account for differences between fishing surveys) and density (to account for
+environmental preferences) can be incorporated for predictions of presence and
+positive density. The following briefly summarises the key methods implemented
+in the VAST framework. For full details of the model the reader is invited
+directed to Thorson \textit{et al} 2017\cite{Thorson2017}.
 
 \textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates advances
 in joint dynamic species models\cite{Thorson2017} to take account of
@@ -570,8 +572,8 @@ time\cite{Thorson2016b}.
 The factor analysis can identify community dynamics and where species have
 similar spatio-temporal patterns, allowing inference of species distributions
 and abundance of poorly sampled species through association with other species
-and allows for computation of spatio-temporal correlations among species
-\cite{Thorson2016b}.
+and allows for computation of spatio-temporal correlations among
+species\cite{Thorson2016b}.
 
 \added[id = brutus]{We use the resultant factor analysis is used to identify
 	community dynamics and drivers common among 18 species and results
@@ -637,7 +639,7 @@ moving offshore)\cite{Thorson2013}.  The best fit estimated an anisotropic
 covariance where the correlations were stronger in a north-east - south-west
 direction, extending approximately 97 km and 140 km before correlations for
 encounter probability and positive density reduced to \textless 10 \%,
-respectively (Figure S9).  Incorporating the spatiotemporal correlations among
+respectively (Figure S9). Incorporating the spatiotemporal correlations among
 and within species provides more efficient use of the data as inference
 can be made about poorly sampled locations from the covariance structure.
 
@@ -767,7 +769,9 @@ and time.
 	 Earl (Cefas).  The authors are very grateful to Lisa Readdy for
 	 provision of the Cefas datasets.
 
- \item[Author contributions] XXXX
+ \item[Author contributions] P.J.D., C.M and J.T.T. designed the study. P.J.D.
+	 conducted the analysis. All authors contributed to writing the
+	 manuscript.  
 
  \item[Competing Interests] The authors declare that they have
 	 no competing financial interests.
