--- a/docs/write_up/JDM_mixed_fishery_letterRemoved.tex
+++ b/docs/write_up/JDM_mixed_fishery_letterRemoved.tex
@@ -10,7 +10,7 @@
 \usepackage[hyphens]{url} % for breaking url's in the bib
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage[]{changes}
+\usepackage[final]{changes}
 \definechangesauthor[color = red]{coilin}
 \definechangesauthor[color = blue]{Paul}
 \definechangesauthor[color = purple]{brutus}
